--- a/templates/base.html
+++ b/templates/base.html
@@ -44,6 +44,12 @@
 	<!-- Document Title
 	============================================= -->
 	<title>{{titulo}} | Simpli Global</title>
+	<link rel="icon" type="image/x-icon" href="{% static 'images/favicon.ico' %}">
+    <link rel="shortcut icon" type="image/png" sizes="512x512" href="{% static 'images/android-chrome-512x512.png' %}"/>
+    <link rel="shortcut icon" type="image/png" sizes="192x192" href="{% static 'images/android-chrome-192x192.png' %}"/>
+    <link rel="shortcut icon" type="image/png" sizes="32x32" href="{% static 'images/favicon-32x32.png' %}"/>
+    <link rel="shortcut icon" type="image/png" sizes="16x16" href="{% static 'images/favicon-16x16.png' %}"/>
+	<link rel="apple-touch-icon" href="{% static 'images/apple-touch-icon.png' %}">
 
 	<!-- Google Tag Manager -->
 	<script>(function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':
