--- a/templates/google_meunegocio.html
+++ b/templates/google_meunegocio.html
@@ -9,7 +9,7 @@
         {% include 'partials/menu.html' %}
 
 		<!-- Page Title
-		============================================= -->
+		=============================================
 
 		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(73,80,87,0.5), #39384D), url('{% static 'demos/seo/images/services/google-top.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 			<div id="particles-line"></div>
@@ -24,7 +24,7 @@
 				</ol>
 			</div>
 
-		</section><!-- #page-title end -->
+		</section> #page-title end -->
 
 		<!-- Content
 		============================================= -->
@@ -46,7 +46,7 @@
 						</div>
 					</div>
 
-					<div class="clear line my-6"></div>
+					<!-- <div class="clear line my-6"></div>
 
 					<div class="heading-block border-bottom-0 center">
 						<div class="badge rounded-pill badge-default">Métodos</div>
@@ -89,12 +89,12 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div> -->
 				</div>
 
-				<div class="clear"></div>
-
 				{% include 'partials/servicos-outros.html' %}
+
+				<div class="clear"></div>
 
                 {% include 'partials/mini-contato.html' %}
 
