--- a/templates/index.html
+++ b/templates/index.html
@@ -36,7 +36,7 @@
 						<div class="heading-block border-bottom-0 center mx-auto mb-0" style="max-width: 550px">
 							<div class="badge rounded-pill badge-default">Serviços</div>
 							<h3 class="nott ls0 mb-3">O Que Fazemos</h3>
-							<p>Dynamically provide access to resource-leveling mindshare vis-a-vis bricks-and-clicks ideas authoritatively.</p>
+							<p>Construímos uma estrutura digital inteligente para a sua agência de turismo.</p>
 						</div>
 						<div class="row justify-content-between align-items-center">
 
@@ -58,7 +58,7 @@
 									</div>
 									<div class="fbox-content">
 										<h3 class="nott ls0">Gestão de Tráfego</h3>
-										<p>Trazemos os clientes mais qualificados para a sua agência</p>
+										<p>Criação e otimização de campanhas no Facebook Ads e Google Ads</p>
 									</div>
 								</div>
 
@@ -67,8 +67,8 @@
 										<a href="#"><img src="{% static 'demos/seo/images/icons/analysis.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
 									</div>
 									<div class="fbox-content">
-										<h3 class="nott ls0">Otimização de SEO</h3>
-										<p>Fazemos seu site ter mais relevância na página de pesquisa do Google</p>
+										<h3 class="nott ls0">SEO</h3>
+										<p>Seu site com mais relevância na rede de pesquisa do Google</p>
 									</div>
 								</div>
 
@@ -77,8 +77,8 @@
 										<a href="#"><img src="{% static 'demos/seo/images/icons/social.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
 									</div>
 									<div class="fbox-content">
-										<h3 class="nott ls0">Desenvolvimento Web</h3>
-										<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, ipsa!</p>
+										<h3 class="nott ls0">Crição de Websites</h3>
+										<p>Sites responsivos e de alta conversão!</p>
 									</div>
 								</div>
 
@@ -106,7 +106,7 @@
 									</div>
 									<div class="fbox-content">
 										<h3 class="nott ls0">Google Meu Negócio</h3>
-										<p>Configuramos o Google Meu Negócio da sua agência para que ela seja encontrada mais facilmente por potenciais clientes</p>
+										<p>Configuração inteligente para trazer mais clientes para a sua agência</p>
 									</div>
 								</div>
 
@@ -116,7 +116,7 @@
 									</div>
 									<div class="fbox-content">
 										<h3 class="nott ls0">Identidade Visual & Logomarca</h3>
-										<p>Entregamos uma identidade visual que condiga com os serviços prestados pela sua agência</p>
+										<p>Criação de identidade visual que corresponda com a sua marca e gere confiança</p>
 									</div>
 								</div>
 
@@ -233,7 +233,7 @@
 				</div> -->
 
 				<!-- Pricing
-				============================================= -->
+				=============================================
 				<div class="section m-0" style="background: url('{% static 'demos/seo/images/sections/4.png' %}') no-repeat center top; background-size: cover; padding: 140px 0 0;">
 					<div class="container clearfix">
 
@@ -257,6 +257,50 @@
 							</div>
 						</div>
 
+					</div>
+				</div> -->
+
+				<!-- Features
+				============================================= -->
+				<div class="section m-0" style="background: url('{% static 'demos/seo/images/sections/4.png' %}') no-repeat center top; background-size: cover; padding: 140px 0 0;">
+					<div class="container clearfix pb-5">
+						<div class="row">
+							<div class="col-md-4 mb-5">
+								<div class="feature-box fbox-center border-0">
+									<div class="fbox-icon">
+										<a href="#"><img src="{% static 'demos/seo/images/icons/research.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
+									</div>
+									<div class="fbox-content">
+										<h3 class="nott ls0">1. Planejamento &amp; Pesquisa</h3>
+										<p>Entendimento sobre as necessidades exatas da sua agência de turismo e elaboração de uma estratégia aplicável.</p>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-4 mb-5">
+								<div class="feature-box fbox-center border-0">
+									<div class="fbox-icon">
+										<a href="#"><img src="{% static 'demos/seo/images/icons/optimizing.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
+									</div>
+									<div class="fbox-content">
+										<h3 class="nott ls0">2. Implementação</h3>
+										<p>Colocar em prática as soluções digitais propostas especialmente para sua empresa.</p>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-4 mb-5">
+								<div class="feature-box fbox-center border-0">
+									<div class="fbox-icon">
+										<a href="#"><img src="{% static 'demos/seo/images/icons/result.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
+									</div>
+									<div class="fbox-content">
+										<h3 class="nott ls0">3. Resultado</h3>
+										<p>Coleta de dados, apresentação das métricas e otimização recorrente de etapas.</p>
+									</div>
+								</div>
+							</div>
+						</div>
 					</div>
 				</div>
 
@@ -390,7 +434,7 @@
 				</div> -->
 
 				<!-- Features
-				============================================= -->
+				=============================================
 				<div class="container clearfix py-5">
 					<div class="row">
 						<div class="col-md-4 mt-5">
@@ -400,7 +444,7 @@
 								</div>
 								<div class="fbox-content">
 									<h3 class="nott ls0">1. Planejamento &amp; Pesquisa</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum, dolore, voluptates!</p>
+									<p>Entendimento sobre as necessidades exatas da sua agência de turismo e elaboração de uma estratégia aplicável.</p>
 								</div>
 							</div>
 						</div>
@@ -411,8 +455,8 @@
 									<a href="#"><img src="{% static 'demos/seo/images/icons/optimizing.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0"></a>
 								</div>
 								<div class="fbox-content">
-									<h3 class="nott ls0">2. Produção</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aliquam, provident.</p>
+									<h3 class="nott ls0">2. Implementação</h3>
+									<p>Colocar em prática as soluções digitais propostas especialmente para sua empresa.</p>
 								</div>
 							</div>
 						</div>
@@ -424,16 +468,14 @@
 								</div>
 								<div class="fbox-content">
 									<h3 class="nott ls0">3. Resultado</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, ipsa!</p>
+									<p>Coleta de dados, apresentação das métricas e otimização recorrente de etapas.</p>
 								</div>
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
-                {% include 'partials/testemunhos.html' %}
-
-				<div class="section bg-transparent mb-0 pb-0 border-0">
+				<!-- <div class="section bg-transparent mb-0 pb-0 border-0">
 					<div class="container bg-color-light border-0 rounded-3 p-3 p-md-4" style="background-color: rgba(173, 181, 189, 0.2);">
 						<div class="heading-block border-bottom-0 center mb-0">
 							<div class="badge rounded-pill badge-default">Etapas</div>
@@ -486,7 +528,7 @@
 						</div>
 
 					</div>
-				</div>
+				</div> -->
 
 				<div class="section bg-transparent py-4">
 					<div class="container">
@@ -499,52 +541,78 @@
 									<div class="toggle-header justify-content-between">
 										<div class="toggle-icon">
 											<i class="toggle-closed icon-caret-down color"></i>
-											<i class="toggle-open icon-caret-up text-warning"></i>
+											<i class="toggle-open icon-caret-up"></i>
 										</div>
 										<div class="toggle-title fw-bold">
-											How do I become an author?
+											A Simpli é uma agência de Marketing Digital?
 										</div>
 									</div>
-									<div class="toggle-content ps-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores.</div>
+									<div class="toggle-content ps-4">Não. Nós somos uma empresa de soluções digitais para agências de turismo. Isso porque a Simpli Global está comprometida não apenas em entregar o melhor serviço para os nossos clientes, mas também em ver os resultados de vendas sendo colhidos pelas agências de turismo parceiras.</div>
 								</div>
 
 								<div class="toggle">
 									<div class="toggle-header justify-content-between">
 										<div class="toggle-icon">
 											<i class="toggle-closed icon-caret-down color"></i>
-											<i class="toggle-open icon-caret-up text-warning"></i>
+											<i class="toggle-open icon-caret-up"></i>
 										</div>
 										<div class="toggle-title fw-bold">
-											Helpful Resources for Authors
+											Por que anunciar no Facebook e no Google?
 										</div>
 									</div>
-									<div class="toggle-content ps-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
+									<div class="toggle-content ps-4">Hoje em dia, anunciar no Google e Facebook é a maneira mais barata e eficiente de mostrar seu serviço para pessoas que ainda não te conhecem. E para as que já te conhecem, de reforçar a sua marca e/ou de criar mais autoridade e confiança para que essas pessoas se tornem clientes.</div>
 								</div>
 
 								<div class="toggle">
 									<div class="toggle-header justify-content-between">
 										<div class="toggle-icon">
 											<i class="toggle-closed icon-caret-down color"></i>
-											<i class="toggle-open icon-caret-up text-warning"></i>
+											<i class="toggle-open icon-caret-up"></i>
 										</div>
 										<div class="toggle-title fw-bold">
-											How much money can I make?
+											Por que investir agora?
 										</div>
 									</div>
-									<div class="toggle-content ps-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
+									<div class="toggle-content ps-4">O tráfego pago apenas potencializa aquilo que sua empresa já faz de melhor. Se você acredita no que sua agência de turismo vende, o tráfego pago tem potencial para ser o combustível e alavancar de forma mais rápida as vendas e fechamentos de pacotes da sua agência de turismo.</div>
 								</div>
 
 								<div class="toggle">
 									<div class="toggle-header justify-content-between">
 										<div class="toggle-icon">
 											<i class="toggle-closed icon-caret-down color"></i>
-											<i class="toggle-open icon-caret-up text-warning"></i>
+											<i class="toggle-open icon-caret-up"></i>
 										</div>
 										<div class="toggle-title fw-bold">
-											Can I offer my items for free on a promotional basis?
+											O que é tráfego pago?
 										</div>
 									</div>
-									<div class="toggle-content ps-4">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Assumenda, dolorum, vero ipsum molestiae minima odio quo voluptate illum excepturi quam cum voluptates doloribus quae nisi tempore necessitatibus dolores ducimus enim libero eaque explicabo suscipit animi at quaerat aliquid ex expedita perspiciatis? Saepe, aperiam, nam unde quas beatae vero vitae nulla.</div>
+									<div class="toggle-content ps-4">Tráfego por si só é um fluxo de pessoas. O tráfego pago é o fluxo de pessoas que chegam até você por meio de mídias pagas (as plataformas mais conhecidas são facebook, instagram, google e youtube). Os anúncios presentes nessas plataformas faz com que haja uma quantidade de pessoas sendo redirecionadas para sites e páginas por meio de promoções pagas.</div>
+								</div>
+
+								<div class="toggle">
+									<div class="toggle-header justify-content-between">
+										<div class="toggle-icon">
+											<i class="toggle-closed icon-caret-down color"></i>
+											<i class="toggle-open icon-caret-up"></i>
+										</div>
+										<div class="toggle-title fw-bold">
+											Quanto tempo leva para ter resultados?
+										</div>
+									</div>
+									<div class="toggle-content ps-4">Como os anúncios feitos nas plataformas online não são uma ciência exata, não existe uma resposta que se aplica para toas as agências de turismo. Porém, existem processos e testes para que seja possível começar a mensurar com mais precisão os resultados obtidos por meio das campanhas pagas.</div>
+								</div>
+
+								<div class="toggle">
+									<div class="toggle-header justify-content-between">
+										<div class="toggle-icon">
+											<i class="toggle-closed icon-caret-down color"></i>
+											<i class="toggle-open icon-caret-up"></i>
+										</div>
+										<div class="toggle-title fw-bold">
+											Devo investir no Google ou no Facebook?
+										</div>
+									</div>
+									<div class="toggle-content ps-4">Sem antes realizar testes, é impossível afirmar qual seria a rede de tráfego que traria mais retorno à sua agência. Essa não é uma questão de "ou um ou outro", mas sim de saber como realocar melhor os orçamentos para cada plataforma de acordo com os números colhidos e métricas analisadas.</div>
 								</div>
 							</div>
 
