--- a/templates/partials/footer.html
+++ b/templates/partials/footer.html
@@ -14,7 +14,7 @@
 
 								<img src="{% static 'images/footer-widget-logo.png' %}" alt="Footer Logo" class="alignleft" style="margin-top: 8px; padding-right: 18px; border-right: 1px solid #DDD;">
 
-								<p class="pt-4"><strong>Marketing Digital</strong> para agências de <strong>Turismo</strong> &amp; <strong>Intercâmbio</strong></p>
+								<p class="pt-4"><strong>Soluções Digitais</strong> para agências de <strong>Turismo</strong> &amp; <strong>Intercâmbio</strong></p>
 
 								<div class="line line-sm"></div>
 
@@ -62,11 +62,11 @@
 
 								<div class="row col-mb-30">
 									<div class="col-lg-6 col-md-12 col-6">
-										<a href="https://facebook.com/semicolonweb" target="_blank" class="social-icon si-dark si-colored si-facebook mb-0" style="margin-right: 10px;">
+										<a href="https://www.facebook.com/Simpli-Global-105298165539689" target="_blank" class="social-icon si-dark si-colored si-facebook mb-0" style="margin-right: 10px;">
 											<i class="icon-facebook"></i>
 											<i class="icon-facebook"></i>
 										</a>
-										<a href="https://facebook.com/semicolonweb" target="_blank" class="text-dark"><small style="display: block; margin-top: 3px;"><strong>Curta</strong><br>no Facebook</small></a>
+										<a href="https://www.facebook.com/Simpli-Global-105298165539689" target="_blank" class="text-dark"><small style="display: block; margin-top: 3px;"><strong>Curta</strong><br>no Facebook</small></a>
 									</div>
 									<div class="col-lg-6 col-md-12 col-6">
 										<a href="https://www.linkedin.com/company/simpliglobal" target="_blank" class="social-icon si-dark si-colored si-linkedin mb-0" style="margin-right: 10px;">
