--- a/templates/partials/mini-contato.html
+++ b/templates/partials/mini-contato.html
@@ -8,9 +8,9 @@
 							<div class="col-md-4">
 								<div class="heading-block border-bottom-0 bottommargin-sm">
 									<div class="badge rounded-pill badge-default">Contato</div>
-									<h3 class="nott ls0">Converse com um de nossos especialistas</h3>
+									<h3 class="nott ls0">Converse com a Simpli</h3>
 								</div>
-								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Deserunt dolore voluptatem assumenda quae possimus sunt dignissimos tempora officia.</p>
+								<p>Solicite uma análise 100% gratuita do cenário da sua empresa.</p>
 							</div>
 
 							<div class="col-lg-3 col-md-4">
