--- a/templates/partials/servicos-outros.html
+++ b/templates/partials/servicos-outros.html
@@ -45,11 +45,9 @@
 												<p class="text-smaller">Trazemos os clientes mais qualificados para a sua agência</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Facebook Advertising</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Instagram Advertising</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Twitter Advertising</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Pinterest Advertising</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Sales Banner</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Facebook Ads</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Google Ads</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Remarketing</li>
 											</ul>
 										</div>
 									</div>
@@ -68,11 +66,9 @@
 												<p class="text-smaller">Fazemos seu site ter mais relevância na página de pesquisa do Google</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Unlimited Pages</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> UI/UX Design</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Speed Optimized</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Graphics Banner</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Advertisement</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Tráfego por pesquisa</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Pesquisa de concorrentes</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Otimização de palavras chave</li>
 											</ul>
 										</div>
 									</div>
@@ -114,11 +110,9 @@
 												<p class="text-smaller">Desenvolvemos utiliando as melhores ferramentas um site moderno e otimizado para responder bem em todos os dispositivos</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Unlimited Pages</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> UI/UX Design</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Speed Optimized</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Graphics Banner</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Advertisement</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Sites institucionais</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Sistemas WEB</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Lead pages</li>
 											</ul>
 										</div>
 									</div>
@@ -137,11 +131,9 @@
 												<p class="text-smaller">Configuramos o Google Meu Negócio da sua agência para que ela seja encontrada mais facilmente por potenciais clientes</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Unlimited Pages</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> UI/UX Design</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Speed Optimized</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Graphics Banner</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Advertisement</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Presença online</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Informações atualizadas</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Interação com clientes</li>
 											</ul>
 										</div>
 									</div>
@@ -160,10 +152,9 @@
 												<p class="text-smaller">Entregamos uma identidade visual que condiga com os serviços prestados pela sua agência</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Unlimited Pages</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> UI/UX Design</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Speed Optimized</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Advertisement</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Marca nova</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Redesign</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Rebrand</li>
 											</ul>
 										</div>
 									</div>
