--- a/templates/sobre.html
+++ b/templates/sobre.html
@@ -14,12 +14,12 @@
 			<div id="particles-line"></div>
 
 			<div class="container clearfix mt-4">
-				<div class="badge rounded-pill border border-light text-light">Sobre nós</div>
+				<!-- <div class="badge rounded-pill border border-light text-light">Sobre nós</div>
 				<h1>O Que Fazemos</h1>
 				<ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
 					<li class="breadcrumb-item active" aria-current="page">Sobre</li>
-				</ol>
+				</ol> -->
 			</div>
 
 		</section><!-- #page-title end -->
@@ -61,7 +61,7 @@
 				
 				<!-- Features
 				============================================= -->
-				<div class="section bg-transparent m-0 pt-5 pb-2">
+				<div class="section bg-transparent m-0 py-5">
 					<div class="container clearfix px-5">
 
 						<div class="row">
@@ -70,7 +70,7 @@
 							</div>
 	
 							<div class="col-lg-6">
-								<p class="mb-3">Selecionamos muito bem as empresas com quem vamos prestar serviço.</p>
+								<p class="mb-3">Selecionamos muito bem as empresas com quem vamos trabalhar.</p>
 								<p>Acreditamos muito no potencial de crescimento que existe em um trabalho bem feito. Esse é o nosso combustível.</p>
 							</div>
 						</div>
@@ -80,7 +80,7 @@
 				</div>
 
 				<!-- Features
-				============================================= -->
+				=============================================
 				<div class="section bg-transparent m-0 pt-3 pb-5">
 					<div class="container clearfix px-5">
 
@@ -129,7 +129,7 @@
 	
 
 					</div>
-				</div>
+				</div> -->
 
 
 				<!-- Features
@@ -225,11 +225,9 @@
 												<p class="text-smaller">Trazemos os clientes mais qualificados para a sua agência.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Facebook Advertising</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Instagram Advertising</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Twitter Advertising</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Pinterest Advertising</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Sales Banner</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Facebook Ads</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Google Ads</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Remarketing</li>
 											</ul>
 										</div>
 									</div>
@@ -248,9 +246,9 @@
 												<p class="text-smaller">Fazemos seu site ter mais relevância na página de pesquisa do Google.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Google Analytics</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Page Analytics</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Page Speed</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Tráfego por pesquisa</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Pesquisa de concorrentes</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Otimização de palavras chave</li>
 											</ul>
 										</div>
 									</div>
@@ -290,11 +288,9 @@
 												<p class="text-smaller">Desenvolvemos utiliando as melhores ferramentas um site moderno e otimizado para responder bem em todos os dispositivos.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Orginality</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Quality</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Readability</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Keyword Density</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Grammer &amp; Spelling</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Sites institucionais</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Sistemas WEB</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Lead pages</li>
 											</ul>
 										</div>
 									</div>
@@ -313,11 +309,9 @@
 												<p class="text-smaller">Configuramos o Google Meu Negócio da sua agência para que ela seja encontrada mais facilmente por potenciais clientes.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Unlimited Pages</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> UI/UX Design</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Speed Optimized</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Graphics Banner</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Advertisement</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Presença online</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Informações atualizadas</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Interação com clientes</li>
 											</ul>
 										</div>
 									</div>
@@ -336,12 +330,9 @@
 												<p class="text-smaller">Entregamos uma identidade visual que condiga com os serviços prestados pela sua agência.</p>
 											</div>
 											<ul class="iconlist ms-3 mt-4 mb-0">
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Google Search</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Google Shopping</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> App Campaign</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Video Advertising</li>
-												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Mobile Advertising</li>
-												<li class="text-muted"><i class="icon-check text-smaller color"></i> Display Advertising</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Marca nova</li>
+												<li class="mb-2 text-muted"><i class="icon-check text-smaller color"></i> Redesign</li>
+												<li class="text-muted"><i class="icon-check text-smaller color"></i> Rebrand</li>
 											</ul>
 										</div>
 									</div>
@@ -373,7 +364,6 @@
 					</div>
 				</div>
 
-                {% include 'partials/testemunhos.html' %}
                 {% include 'partials/promo-contato.html' %}
 
 			</div>
