--- a/templates/contato.html
+++ b/templates/contato.html
@@ -8,7 +8,7 @@
 
         {% include 'partials/menu.html' %}
 		<!-- Page Title
-		============================================= -->
+		=============================================
 
 		<section id="page-title" class="page-title-parallax page-title-center page-title-dark include-header" style="background-image: linear-gradient(to top, rgba(73,80,87,0.5), #39384D), url('{% static 'demos/seo/images/services/contato-top.jpg' %}'); background-size: cover; padding: 120px 0;" data-bottom-top="background-position:0px 300px;" data-top-bottom="background-position:0px -300px;">
 			<div id="particles-line"></div>
@@ -22,7 +22,7 @@
 				</ol>
 			</div>
 
-		</section><!-- #page-title end -->
+		</section> #page-title end -->
 
 		<!-- Content
 		============================================= -->
@@ -35,10 +35,10 @@
 							<div class="col-sm-6 col-lg-3">
 								<div class="feature-box fbox-center fbox-bg fbox-plain">
 									<div class="fbox-icon">
-										<a href="#"><i class="icon-map-marker2"></i></a>
+										<a href="mailto:annabela@simpliglobal.com.br"><i class="icon-email2"></i></a>
 									</div>
 									<div class="fbox-content">
-										<h3>Nosso Local<span class="subtitle">Ourinhos, São Paulo</span></h3>
+										<h3>Envie um email<span class="subtitle"><a href="mailto:annabela@simpliglobal.com.br">annabela@simpliglobal.com.br</a></span></h3>
 									</div>
 								</div>
 							</div>
@@ -46,10 +46,10 @@
 							<div class="col-sm-6 col-lg-3">
 								<div class="feature-box fbox-center fbox-bg fbox-plain">
 									<div class="fbox-icon">
-										<a href="#"><i class="icon-phone3"></i></a>
+										<a href="tel:+393516587627"><i class="icon-phone3"></i></a>
 									</div>
 									<div class="fbox-content">
-										<h3>Fale conosco<span class="subtitle">(xx) xxxx xxxx</span></h3>
+										<h3>Fale conosco<span class="subtitle"><a href="tel:+393516587627">+39 35 1658 7627</a></span></h3>
 									</div>
 								</div>
 							</div>
@@ -57,10 +57,10 @@
 							<div class="col-sm-6 col-lg-3">
 								<div class="feature-box fbox-center fbox-bg fbox-plain">
 									<div class="fbox-icon">
-										<a href="#"><i class="icon-skype2"></i></a>
+										<a href="https://api.whatsapp.com/send?phone=393516587627" target="_blank"><i class="icon-whatsapp"></i></a>
 									</div>
 									<div class="fbox-content">
-										<h3>Faça uma chamada<span class="subtitle">@Nome</span></h3>
+										<h3>Envie uma mensagem<span class="subtitle"><a href="https://api.whatsapp.com/send?phone=393516587627" target="_blank">WhatsApp</a></span></h3>
 									</div>
 								</div>
 							</div>
@@ -68,10 +68,10 @@
 							<div class="col-sm-6 col-lg-3">
 								<div class="feature-box fbox-center fbox-bg fbox-plain">
 									<div class="fbox-icon">
-										<a href="#"><i class="icon-instagram2"></i></a>
+										<a href="https://www.instagram.com/simpli.global/" target="_blank"><i class="icon-instagram2"></i></a>
 									</div>
 									<div class="fbox-content">
-										<h3>Siga no Instagram<span class="subtitle">2.3M Followers</span></h3>
+										<h3>Siga no Instagram<span class="subtitle"><a href="https://www.instagram.com/simpli.global/" target="_blank">@Simpli.Global</a></span></h3>
 									</div>
 								</div>
 							</div>
@@ -85,7 +85,7 @@
 					<div class="row justify-content-center">
 						<div class="col-md-7">
 							<h2 class="display-4 text-dark fw-semibold ls--2 mb-3">Deixe sua mensagem</h2>
-							<p class="text-dark">Entraremos em contato assim que alguem estiver disponível.</p>
+							<p class="text-dark">Entraremos em contato em breve!</p>
 
 							<div class="form-widget topmargin">
 
@@ -93,11 +93,11 @@
 
 								<form class="mb-0" id="template-contactform" name="template-contactform" action="" method="post">
 									{% csrf_token %}
-									<div class="form-process">
+									<!-- <div class="form-process">
 										<div class="css3-spinner">
 											<div class="css3-spinner-scaler"></div>
 										</div>
-									</div>
+									</div> -->
 
 									<div class="position-absolute top-0 start-50 translate-middle" id="alerta">
 									</div>
@@ -126,25 +126,24 @@
 										</div>
 
 										<div class="col-md-4 form-group">
-											<label for="form_estado">Estado<small class="text-danger">*</small></label>
-											<select id="form_estado" name="form_estado" class="required form-control">
+											<label for="form_interesse">Interesse em<small class="text-danger">*</small></label>
+											<select id="form_interesse" name="form_interesse" class="required form-control">
 												<option value="" disabled="disabled" selected>-- Selecione --</option>
-												<option value="pr">Paraná</option>
-												<option value="sp">São Paulo</option>
-												<option value="rj">Rio de Janeiro</option>
+												<option value="Gestão de Tráfego">Gestão de Tráfego</option>
+												<option value="SEO">SEO</option>
+												<option value="Criação de Websites">Criação de Websites</option>
+												<option value="Google Meu Negócio">Google Meu Negócio</option>
+												<option value="Identidade Visual">Identidade Visual & Logomarca</option>
 											</select>
 										</div>
 
 										<div class="col-md-4 form-group">
-											<label for="form_interesse">Interessado em<small class="text-danger">*</small></label>
-											<select id="form_interesse" name="form_interesse" class="required form-control">
+											<label for="form_forma">Preferência para contato<small class="text-danger">*</small></label>
+											<select id="form_forma" name="form_forma" class="required form-control">
 												<option value="" disabled="disabled" selected>-- Selecione --</option>
-												<option value="Análise estratégica">Análise estratégica</option>
-												<option value="Gestão de tráfego">Gestão de tráfego pago</option>
-												<option value="Identidade visual">Identidade visual</option>
-												<option value="Criativos">Criativos</option>
-												<option value="Desenvolvimento WEB">Desenvolvimento WEB</option>
-												<option value="Posts">Posts</option>
+												<option value="Email">Mensagem por email</option>
+												<option value="Telefone">Ligação por telefone</option>
+												<option value="Whatsapp">Mensagem por WhatsApp</option>
 											</select>
 										</div>
 
@@ -217,8 +216,8 @@
 			var email = document.getElementById("form_email").value;
 			var telefone = document.getElementById("form_fone").value;
 			var empresa = document.getElementById("form_empresa").value;
-			var estado = document.getElementById("form_estado").value;
 			var interesse = document.getElementById("form_interesse").value;
+			var forma = document.getElementById("form_forma").value;
 			var mensagem = document.getElementById("form_mensagem").value;
 			if (nome == '') {
 				document.getElementById("form_nome").focus();
@@ -226,10 +225,10 @@
 				document.getElementById("form_email").focus();
 			} else if (telefone.length < 14) {
 				document.getElementById("form_fone").focus();
-			} else if (estado == '') {
-				document.getElementById("form_estado").focus();
 			} else if (interesse == '') {
 				document.getElementById("form_interesse").focus();
+			} else if (forma == '') {
+				document.getElementById("form_forma").focus();
 			} else if (mensagem == '') {
 				document.getElementById("form_mensagem").focus();
 			} else {
@@ -241,8 +240,8 @@
 						email: $('input[name="form_email"]').val(),
 						empresa: $('input[name="form_empresa"]').val(),
 						telefone: $('input[name="form_fone"]').val(),
-						estado: estado,
 						interesse: interesse,
+						forma: forma,
 						mensagem: mensagem
 					},
 					function (data) {
