--- a/templates/partials/menu.html
+++ b/templates/partials/menu.html
@@ -25,17 +25,17 @@
 
 					</div>
 
-					<div class="col-auto col-lg-3 order-lg-1 d-none d-md-flex px-0">
+					<div class="col-auto order-lg-1 d-none d-md-flex px-0">
 						<div class="social-icons">
-							<a href="https://facebook.com/semicolonweb" class="social-icon si-rounded si-dark si-mini si-facebook" target="_blank">
+							<a href="https://www.facebook.com/Simpli-Global-105298165539689" class="social-icon si-rounded si-dark si-mini si-facebook" target="_blank">
 								<i class="icon-facebook"></i>
 								<i class="icon-facebook"></i>
 							</a>
-							<a href="https://twitter.com/__semicolon" class="social-icon si-rounded si-dark si-mini si-linkedin" target="_blank">
+							<a href="https://www.linkedin.com/company/simpliglobal" class="social-icon si-rounded si-dark si-mini si-linkedin" target="_blank">
 								<i class="icon-linkedin"></i>
 								<i class="icon-linkedin"></i>
 							</a>
-							<a href=" https://instagram.com/semicolonweb" class="social-icon si-rounded si-dark si-mini si-instagram" target="_blank">
+							<a href="https://www.instagram.com/simpli.global/" class="social-icon si-rounded si-dark si-mini si-instagram" target="_blank">
 								<i class="icon-instagram"></i>
 								<i class="icon-instagram"></i>
 							</a>
@@ -128,7 +128,7 @@
 															<img src="{% static 'demos/seo/images/icons/analise-estrategica.svg' %}" alt="Feature Icon" class="bg-transparent rounded-0">
 														</div>
 														<div class="fbox-content">
-															<h3 class="nott ls0">Otimização de SEO</h3>
+															<h3 class="nott ls0">SEO</h3>
 															<p>Fazemos seu site ter mais relevância na página de pesquisa do Google</p>
 														</div>
 													</div>
@@ -187,10 +187,10 @@
 															<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Commodi, ipsa!</p>
 														</div>
 													</div>
-												</a> -->
+												</a>
 												<div class="mega-menu-column sub-menu-container col-12 p-0">
 													<a href="{% url 'sobre' %}" class="button button-rounded button-large nott ls0 w-100 text-center m-0 rounded-0 py-3 button-light ">Saiba Mais <i class="icon-line-arrow-right"></i></a>
-												</div>
+												</div> -->
 											</div>
 										</div>
 									</div>
