--- a/templates/partials/slider.html
+++ b/templates/partials/slider.html
@@ -10,9 +10,9 @@
                     <div class="col-lg-5 col-md-8">
                         <div class="slider-title">
                             <div class="badge rounded-pill badge-default">Marketing Digital</div>
-                            <h2>Melhore sua presença on-line.</h2>
-                            <h3 class="text-rotater mb-2" data-separator="," data-rotate="fadeIn" data-speed="3500">- Boost your own <span class="t-rotate">Awesome,Beautiful,Great</span> Website.</h3>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quia vitae mollitia dignissimos ab qui aspernatur.</p>
+                            <h2>Sua agência de turismo no meio digital</h2>
+                            <h3 class="text-rotater mb-2" data-separator="," data-rotate="fadeIn" data-speed="3500">- <span class="t-rotate">Alcance,Conquiste,Bata</span> todas as metas.</h3>
+                            <p>Alavanque o retorno das atividades do Turismo com uma presença digital muito mais forte e estruturada.</p>
                             <a href="{% url 'sobre' %}" class="button button-rounded button-large nott ls0">Saiba mais</a>
                             <a href="{% url 'contato' %}" class="button button-rounded button-large button-light text-dark bg-white border nott ls0">Entre em contato</a>
                         </div>
