--- a/templates/politica_privacidade.html
+++ b/templates/politica_privacidade.html
@@ -15,12 +15,12 @@
 			<div id="particles-line"></div>
 
 			<div class="container clearfix mt-4">
-				<div class="badge rounded-pill border border-light text-light">Seus Dados</div>
+				<!-- <div class="badge rounded-pill border border-light text-light">Seus Dados</div> -->
 				<h1>Política de Privacidade</h1>
-				<ol class="breadcrumb">
+				<!-- <ol class="breadcrumb">
 					<li class="breadcrumb-item"><a href="{% url 'index' %}">Home</a></li>
 					<li class="breadcrumb-item active" aria-current="page">Política de Privacidade</li>
-				</ol>
+				</ol> -->
 			</div>
 
 		</section><!-- #page-title end -->
